README: Mention bnc# and fate# prefixes, use a more recent example

--- a/README
+++ b/README
@@ -79,6 +79,10 @@ what the patch does, who wrote it, and who inside SUSE/Novell we'll
 
  * The patch should include a References: tag that identifies the 
    Bugzilla bug number, FATE entry, etc. where the patch is discussed.
+   Please prefix bugzilla.novell.com bug numbers with bnc# and fate
+   feature numbers with fate#. Have a look at
+   http://en.opensuse.org/Packaging/Patches#Current_set_of_abbreviations
+   for a full list of abbreviations.
  
  * The patch header may (and often, should) include a more extensive
    description of what the patch does, why, and how.  The idea is to
@@ -100,24 +104,27 @@ Example usage of scripts/patch-tag-template:
 
 Example patch header:
 
-    | From: Andrew Morton <akpm@osdl.org>
-    | Subject: Fix EOF -EIO problems with direct io
-    | References: 47120, LTC1001
-    | Patch-mainline: 2.6.11-rc2
+    | Date: Fri, Sep 26 2008 15:20:10 +1000
+    | From: Peter Leckie <pleckie@sgi.com>
+    | References: SGI:PV986789 bnc#482148
+    | Subject: Clean up dquot pincount code
+    | Patch-mainline: 2.6.28
     | 
-    | For reasons which escape me, blockdev_get_blocks() is returning -EIO if
-    | the mapping request straddles the end of the disk.  This causes reads
-    | which straddle end-of-disk to return -EIO.
+    | Clean up dquot pincount code.
     | 
-    | Fix it up so that it correctly trims the returned result down to match
-    | the size of the device, for both reads and writes.
+    | This is a code cleanup and optimization that removes a per mount point
+    | spinlock from the quota code and cleans up the code.
     | 
-    | If a write attempt is fully beyond end-of-device then return -EIO.  We
-    | never get this far anyway, because generic_write_checks() will return
-    | -ENOSPC if all of the write lies outside a blockdev's i_size.
+    | The patch changes the pincount from being an int protected by a spinlock
+    | to an atomic_t allowing the pincount to be manipulated without holding
+    | the spinlock.
     | 
-    | Signed-off-by: Jens Axboe <axboe@suse.de>
-
+    | This cleanup also protects against random wakup's of both the aild and
+    | xfssyncd by reevaluating the pincount after been woken. Two latter patches
+    | will address the Spurious wakeups.
+    | 
+    | Signed-off-by: Peter Leckie <pleckie@sgi.com>
+    | Acked-by: Jan Kara <jack@suse.cz>
 
 Before You Commit -- Things To Check
 ====================================
