--- a/README
+++ b/README
@@ -135,11 +135,6 @@ doing this is using scripts/sequence-patch.sh:
     $ export SCRATCH_AREA=/var/tmp/scratch
     $ scripts/sequence-patch.sh
 
-Please subscribe to the kernel-cvs@suse.de mailing list,
-http://mailman.suse.de/mailman/listinfo/kernel-cvs.  This is where
-automatic build failures are sent; please watch this list
-particularly after committing to the repository.
-
 Please test-compile the kernel or even test-build kernel packages,
 depending on the impact of your changes.  Use scripts/tar-up.sh for
 creating an Autobuild source directory.
@@ -312,5 +307,9 @@ be obeyed:
 Related Information
 ===================
 
+Internal:
 https://wiki.innerweb.novell.com/index.php/SUSE/Labs_Publications/Kernel_Building.html
 https://wiki.innerweb.novell.com/index.php/SUSE/Labs_Publications/kernel_patches_rules
+
+Public:
+TBD
