README: Update the chapter about Embargoed Patches
The old mechanism won't help us with an open GIT repository, we need to
keep embargoed patches in separate branches.

--- a/README
+++ b/README
@@ -288,20 +288,15 @@ At certain times during development, the kernel may include "embargoed"
 patches, i.e., patches that must not be mad available to parties outside
 of SUSE/Novell before an agreed-upon time.  Such patches usually have a
 date of publication that has been coordinated among linux distributors,
-etc.
+etc. Such patches must not be committed to the usual branches, because
+these are pushed to a public mirror, but instead to a branch named with
+an _EMBARGO suffix, e.g. SLE11_BRANCH_EMBARGO. The KOTD scripts will
+testbuild such branches, but won't publish them. Once the fix becomes
+public, the branch needs to be merged back info the "mainline" branch,
+e.g.:
 
-We allow adding such patches to the repository, but the following must
-be obeyed:
-
- * The kernel-source.changes file should not give away details that
-   might allow someone to exploit the bug being fixed.  (The automatic
-   CVS builds are made available publicaly, and the openSUSE copies of
-   the kernel packages also include the entire changelog.)
-
- * Embargoed patches must be added to the embargoed-patches file with
-   their planned release date, so that automatic CVS builds will
-   automatically exclude them.  When the release date shifts,
-   embargoed-patches must be updated accordingly.
+    $ git checkout SLE11_BRANCH
+    $ git merge SLE11_BRANCH_EMBARGO
 
 
 Related Information
