- Update to 2.6.38-rc5.

--- a/patches.suse/twofish-2.6
+++ b/patches.suse/twofish-2.6
@@ -33,7 +33,7 @@ See $subject, used up to 9.2 on new installs.
  
 +obj-$(CONFIG_CIPHER_TWOFISH)	+= loop_fish2.o
 +
- swim_mod-objs	:= swim.o swim_asm.o
+ swim_mod-y	:= swim.o swim_asm.o
 --- /dev/null
 +++ b/drivers/block/loop_fish2.c
 @@ -0,0 +1,625 @@
