- Update patches.kernel.org/patch-2.6.38.1 (bnc#558740).   (Add a bug reference)

--- a/patches.kernel.org/patch-2.6.38.1
+++ b/patches.kernel.org/patch-2.6.38.1
@@ -1,6 +1,7 @@
 From: Jiri Slaby <jslaby@suse.cz>
 Subject: Linux 2.6.38.1
 Patch-mainline: Linux 2.6.38.1
+References: bnc#558740
 
 Signed-off-by: Jiri Slaby <jslaby@suse.cz>
 ---
