- Update to 3.4-rc6.   - Eliminated 2 patches.

--- a/patches.xen/xen3-patch-3.1
+++ b/patches.xen/xen3-patch-3.1
@@ -29,7 +29,7 @@ Acked-by: jbeulich@suse.com
 +	select CLKEVT_I8253 if !XEN
  	select ARCH_HAVE_NMI_SAFE_CMPXCHG
  	select GENERIC_IOMAP
- 	select DCACHE_WORD_ACCESS if !DEBUG_PAGEALLOC
+ 	select DCACHE_WORD_ACCESS
 @@ -109,7 +109,7 @@ config GENERIC_CLOCKEVENTS
  
  config ARCH_CLOCKSOURCE_DATA
