--- a/patches.xen/xen3-patch-3.4
+++ b/patches.xen/xen3-patch-3.4
@@ -2711,7 +2711,7 @@ Acked-by: jbeulich@suse.com
  };
  
 +static const struct x86_cpu_id coretemp_ids[] = {
-+	{ X86_VENDOR_INTEL, X86_FAMILY_ANY, X86_MODEL_ANY, X86_FEATURE_DTS },
++	{ X86_VENDOR_INTEL, X86_FAMILY_ANY, X86_MODEL_ANY, X86_FEATURE_DTHERM },
 +	{}
 +};
 +MODULE_DEVICE_TABLE(x86cpu, coretemp_ids);
