- Linux 3.4.6. - patches.xen/xen3-patch-3.3: - Delete   patches.fixes/acpica_fix_null_pointer_in_repair_code.patch.

--- a/patches.xen/xen3-patch-3.3
+++ b/patches.xen/xen3-patch-3.3
@@ -2753,11 +2753,11 @@ Acked-by: jbeulich@suse.com
 --- 12.2.orig/drivers/acpi/processor_core.c	2012-02-08 12:25:09.000000000 +0100
 +++ 12.2/drivers/acpi/processor_core.c	2012-02-09 14:24:29.000000000 +0100
 @@ -205,7 +205,7 @@ int acpi_get_cpuid(acpi_handle handle, i
- 		 * Ignores apic_id and always return 0 for CPU0's handle.
+ 		 * This should be the case if SMP tables are not found.
  		 * Return -1 for other CPU's handle.
  		 */
--		if (acpi_id == 0)
-+		if (acpi_id == 0 && !i)
+-		if (nr_cpu_ids <= 1 && acpi_id == 0)
++		if (nr_cpu_ids <= 1 && acpi_id == 0 && !i)
  			return acpi_id;
  		else
  			return apic_id;
