--- a/patches.xen/xen3-patch-3.2
+++ b/patches.xen/xen3-patch-3.2
@@ -4011,8 +4011,8 @@ Acked-by: jbeulich@suse.com
  #include <xen/xenbus.h>
 +#include <xen/xen.h>
  #include "xenbus_comms.h"
+ #include <asm/xen/hypervisor.h>
  
- #ifdef HAVE_XEN_PLATFORM_COMPAT_H
 --- head.orig/include/xen/balloon.h	2012-02-03 13:34:56.000000000 +0100
 +++ head/include/xen/balloon.h	2012-02-03 13:44:44.000000000 +0100
 @@ -82,8 +82,9 @@ extern struct balloon_stats balloon_stat
