--- a/patches.xen/xen3-patch-3.6
+++ b/patches.xen/xen3-patch-3.6
@@ -1649,7 +1649,7 @@ Acked-by: jbeulich@suse.com
 --- head.orig/drivers/xen/xenbus/xenbus_xs.c	2012-03-12 16:18:49.000000000 +0100
 +++ head/drivers/xen/xenbus/xenbus_xs.c	2012-08-20 14:37:06.000000000 +0200
 @@ -631,9 +631,14 @@ static struct xenbus_watch *find_watch(c
- 
+ }
  static void xs_reset_watches(void)
  {
 -#ifdef MODULE
@@ -1661,9 +1661,9 @@ Acked-by: jbeulich@suse.com
 +		return;
 +#endif
 +
- 	err = xenbus_scanf(XBT_NIL, "control",
- 			   "platform-feature-xs_reset_watches", "%d",
- 			   &supported);
+ 	if (xen_strict_xenbus_quirk())
+ 		return;
+ 
 --- head.orig/include/xen/interface/platform.h	2012-10-04 13:09:12.000000000 +0200
 +++ head/include/xen/interface/platform.h	2012-08-20 14:37:06.000000000 +0200
 @@ -482,6 +482,7 @@ DEFINE_XEN_GUEST_HANDLE(xenpf_pcpu_versi
