Update to 3.7-rc8.
- Delete patches.rpmify/net-fix-build-failure-in-xilinx.

--- a/patches.xen/xen3-patch-3.4
+++ b/patches.xen/xen3-patch-3.4
@@ -1041,7 +1041,7 @@ Acked-by: jbeulich@suse.com
  	if ((c->x86 == 0x15) &&
  	    (c->x86_model >= 0x10) && (c->x86_model <= 0x1f) &&
 @@ -640,6 +641,7 @@ static void __cpuinit init_amd(struct cp
- 			}
+ 			wrmsrl_safe(0xc0011021, val);
  		}
  	}
 +#endif
