- Linux 3.6.10. - Refresh patches.xen/xen3-patch-3.4.

--- a/patches.xen/xen3-patch-3.4
+++ b/patches.xen/xen3-patch-3.4
@@ -1045,8 +1045,8 @@ Acked-by: jbeulich@suse.com
  	}
 +#endif
  
- 	cpu_detect_cache_sizes(c);
- 
+ 	/*
+ 	 * The way access filter has a performance penalty on some workloads.
 --- head.orig/arch/x86/kernel/cpu/common-xen.c	2012-08-01 12:12:01.000000000 +0200
 +++ head/arch/x86/kernel/cpu/common-xen.c	2012-08-01 12:13:15.000000000 +0200
 @@ -18,6 +18,7 @@
