Update to 3.8-rc7.
Eliminated 1 patch.

--- a/patches.xen/xen3-patch-3.1
+++ b/patches.xen/xen3-patch-3.1
@@ -2813,9 +2813,9 @@ Acked-by: jbeulich@suse.com
 +#ifndef CONFIG_XEN
  	struct xen_pcibk_dev_data *dev_data;
 +#endif
- 	int otherend = pdev->xdev->otherend_id;
  	int status;
  
+ 	if (unlikely(verbose_request))
 @@ -153,14 +166,20 @@ int xen_pcibk_enable_msi(struct xen_pcib
  	/* The value the guest needs is actually the IDT vector, not the
  	 * the local domain's IRQ number. */
