- Update Xen patches to 3.8.2 and c/s 1226.

--- a/patches.xen/xen3-patch-3.2
+++ b/patches.xen/xen3-patch-3.2
@@ -2533,7 +2533,7 @@ Acked-by: jbeulich@suse.com
  }
  
  int blkif_schedule(void *arg)
-@@ -316,6 +318,46 @@ irqreturn_t blkif_be_int(int irq, void *
+@@ -316,6 +318,47 @@ irqreturn_t blkif_be_int(int irq, void *
   * DOWNWARD CALLS -- These interface with the block-device layer proper.
   */
  
@@ -2550,7 +2550,8 @@ Acked-by: jbeulich@suse.com
 +	if (vbd_translate(&preq, blkif, REQ_DISCARD) != 0) {
 +		DPRINTK("access denied: discard of [%Lu,%Lu) on dev=%04x\n",
 +			preq.sector_number,
-+			preq.sector_number + preq.nr_sects, preq.dev);
++			preq.sector_number + preq.nr_sects,
++			blkif->vbd.pdevice);
 +		make_response(blkif, req->id, req->operation, BLKIF_RSP_ERROR);
 +		msleep(1); /* back off a bit */
 +		return;
