Update to 3.9-rc3. - 2 patches were eliminated
CONFIG_EXPERIMENTAL was eliminated, so I've updated the Xen patches for
that. DMRAID45 and Rich ACLs also needed updating.

--- a/patches.xen/xen3-patch-3.1
+++ b/patches.xen/xen3-patch-3.1
@@ -1726,7 +1726,7 @@ Acked-by: jbeulich@suse.com
 +	depends on !XEN
  
  config VIRTIO_PCI
- 	tristate "PCI driver for virtio devices (EXPERIMENTAL)"
+ 	tristate "PCI driver for virtio devices"
 --- head.orig/drivers/xen/Kconfig	2012-10-04 13:07:45.000000000 +0200
 +++ head/drivers/xen/Kconfig	2012-10-31 11:19:51.000000000 +0100
 @@ -125,70 +125,6 @@ config XEN_NETDEV_LOOPBACK
