--- a/patches.xen/xen3-patch-3.2
+++ b/patches.xen/xen3-patch-3.2
@@ -2365,7 +2365,7 @@ Acked-by: jbeulich@suse.com
  	tristate "Intel Sandy-Bridge Integrated MC"
 -	depends on EDAC_MM_EDAC && PCI && X86_64 && X86_MCE_INTEL
 +	depends on EDAC_MM_EDAC && PCI && X86_64 && (X86_MCE_INTEL || X86_XEN_MCE)
- 	depends on PCI_MMCONFIG && EXPERIMENTAL
+ 	depends on PCI_MMCONFIG
  	help
  	  Support for error detection and correction the Intel
 --- head.orig/drivers/edac/sb_edac.c	2013-02-20 11:24:39.000000000 +0100
