--- a/patches.xen/xen3-patch-3.7
+++ b/patches.xen/xen3-patch-3.7
@@ -19,7 +19,7 @@ Acked-by: jbeulich@suse.com
 -config XEN
 +config PARAVIRT_XEN
  	bool "Xen guest support on ARM (EXPERIMENTAL)"
- 	depends on EXPERIMENTAL && ARM && OF
+ 	depends on ARM && AEABI && OF
  	depends on CPU_V7 && !CPU_V6
 --- head.orig/arch/arm/Makefile	2013-03-05 12:23:59.000000000 +0100
 +++ head/arch/arm/Makefile	2012-10-30 15:36:13.000000000 +0100
@@ -2653,7 +2653,7 @@ Acked-by: jbeulich@suse.com
 --- head.orig/drivers/remoteproc/Kconfig	2013-03-05 12:23:59.000000000 +0100
 +++ head/drivers/remoteproc/Kconfig	2012-11-02 12:55:30.000000000 +0100
 @@ -1,4 +1,5 @@
- menu "Remoteproc drivers (EXPERIMENTAL)"
+ menu "Remoteproc drivers"
 +	depends on !XEN # not compatible with the selection of VIRTIO below
  
  # REMOTEPROC gets selected by whoever wants it
