--- a/patches.xen/xen3-patch-3.8
+++ b/patches.xen/xen3-patch-3.8
@@ -23,8 +23,8 @@ Acked-by: jbeulich@suse.com
  config BOOTPARAM_HOTPLUG_CPU0
  	bool "Set default setting of cpu0_hotpluggable"
  	default n
--	depends on HOTPLUG_CPU && EXPERIMENTAL
-+	depends on HOTPLUG_CPU && !XEN && EXPERIMENTAL
+-	depends on HOTPLUG_CPU
++	depends on HOTPLUG_CPU && !XEN
  	---help---
  	  Set whether default state of cpu0_hotpluggable is on or off.
  
@@ -32,8 +32,8 @@ Acked-by: jbeulich@suse.com
  config DEBUG_HOTPLUG_CPU0
  	def_bool n
  	prompt "Debug CPU0 hotplug"
--	depends on HOTPLUG_CPU && EXPERIMENTAL
-+	depends on HOTPLUG_CPU && !XEN && EXPERIMENTAL
+-	depends on HOTPLUG_CPU
++	depends on HOTPLUG_CPU && !XEN
  	---help---
  	  Enabling this option offlines CPU0 (if CPU0 can be offlined) as
  	  soon as possible and boots up userspace with CPU0 offlined. User
