- Linux 3.8.6. - Refresh patches.xen/xen3-fixup-xen. - Refresh patches.xen/xen3-patch-3.1. - Refresh patches.xen/xen3-patch-3.7.

--- a/patches.xen/xen3-patch-3.1
+++ b/patches.xen/xen3-patch-3.1
@@ -2986,15 +2986,15 @@ Acked-by: jbeulich@suse.com
 +#include <xen/evtchn.h>
 +#endif
 +#include <xen/xen.h>
+ #include <xen/interface/physdev.h>
  #include "pciback.h"
  #include "conf_space.h"
- #include "conf_space_quirks.h"
 @@ -92,7 +97,9 @@ static void pcistub_device_release(struc
  
- 	dev_dbg(&psdev->dev->dev, "pcistub_device_release\n");
+ 	dev_dbg(&dev->dev, "pcistub_device_release\n");
  
 +#ifndef CONFIG_XEN
- 	xen_unregister_device_domain_owner(psdev->dev);
+ 	xen_unregister_device_domain_owner(dev);
 +#endif
  
  	/* Call the reset function which does not take lock as this
