--- a/patches.xen/xen3-patch-3.7
+++ b/patches.xen/xen3-patch-3.7
@@ -2953,9 +2953,9 @@ Acked-by: jbeulich@suse.com
  int xen_event_channel_op_compat(int cmd, void *arg)
  {
 @@ -78,3 +87,5 @@ int HYPERVISOR_physdev_op_compat(int cmd
- 
  	return rc;
  }
+ EXPORT_SYMBOL_GPL(xen_physdev_op_compat);
 +
 +#endif /* CONFIG_XEN_COMPAT <= 0x030002 */
 --- head.orig/drivers/xen/fbfront/xenfb.c	2011-02-08 10:37:50.000000000 +0100
